--- a/dapp/package.json
+++ b/dapp/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.11",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "axios": "^1.3.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
